--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,4 +1,6 @@
 * Tue Jan 01 2019 jsbsan <jusabejusabe@hotmail.com> 0.0.4
+
+* Tue Jan 01 2019 jsbsan <jusabejusabe@hotmail.com> 0.0.4
 - añado parte de copiar al portapapeles
 
 * Wed Jul 05 2017 jsbsan <jusabejusabe@hotmail.com> 0.0.4
