solo arranca una instancia

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,6 @@
+* Sun Feb 23 2020 jsbsan <jusabejusabe@hotmail.com> 0.0.5
+- solo arranca una unica instancia
+
 * Tue Jan 01 2019 jsbsan <jusabejusabe@hotmail.com> 0.0.4
 
 * Tue Jan 01 2019 jsbsan <jusabejusabe@hotmail.com> 0.0.4
